2006-03-06  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/command.c: #include direct.h if compiling with MSVC.

2006-03-06  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* docs/titlepag.tex: The previous method of detecting pdflatex
	vs. normal latex no longer works (some clever guys decided that
	they should use pdflatex to make DVI files...).  Give up trying to
	sort out that mess.  Just assume that hyperref knows this on its
	own, these days.

	* src/syscfg.h (OS): Provide a fallback definition to avoid using
	an undefined macro.
	(GP_EXCEPTION_NAME) [__WATCOMC__]: Define.
	
	* config/makefile.oww: Some changes to make better use of Watcom's
	Make tool.
	
	* src/win/wgraph.c (drawgraph): Add missing break.
	
	* term/win.trm (Win_Opts): Change abbreviations of option
	{no}enhanced.
	(WIN_Font, WIN_Fontsize): Initialize to sensible defaults.
	(WIN_enhanced_flush): Remove unused local variable mode.
	
2006-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm (CGM_options) term/emf.trm (EMF_options)
	term/pdf.trm (PDF_options) term/post.trm (PS_OPTIONS):
	Accept font request strings of the form
	    set term <foo> ... font "<fontface>,<fontsize>"
	Whatever previous syntax each terminal used remains valid as well.

2006-03-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

        * term/win.trm (WIN_image): New function.  An edited copy of
        PM_image.
        (TERM_ENTRY): Add entry for WIN_image.

        * src/win/wgraph.c (GraphOp, GraphOpSize): Moved body of previous
        GraphOp function to GraphOpSize, which has additional argument.
        GraphOp replaced by a call to the new function.
        (drawgraph): Handle new opcode W_image.

        * src/win/wgnuplib.h (W_image): New wgraph operation code.
        (GraphOpSize): Added prototype.

2006-03-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

        Bastian Maerkisch's enhanced text mode patch for Windows:
        